--- a/template/simple.gohtml
+++ b/template/simple.gohtml
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{{.}}</title>
 </head>
 <body>
     <h1>Welcome To Golang Web</h1>
-    <h2></h2>
+    <h2>{{.}}</h2>
 </body>
 </html>
